syntax = "proto3";

package user;

service UserService {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string userId = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
}

message UserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  bool isActive = 4;
}